--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Um bot que irá moderar a sua comundade de um jeito diferenciado">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    
     <title>BB-8 Bot - Modere a sua comunidade do Discord</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img class="logo-imagem" src="logo.png" alt="Logo do BB-8 bot">
         <nav class="menu-nav">
             <a class="menu-item">Comunidade BB-8</a>
@@ -17,7 +21,7 @@
             <a class="menu-item">Comandos</a>
         </nav>
     </header>
-
+    <hr>
     <main class="conteudo">
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
@@ -26,18 +30,17 @@
                 <button class="conteudo-principal-botao">Me adicione!</button>
             </div>
             <img class="conteudo-principal-imagem" src="BB82.1.png" alt="imagem do BB-8 bot">
-        </section class="conteudo-secundario">
+        </section>
+                    
+        <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo">Quais são suas habilidades?</h3>
             <p class="conteudo-secundario-paragrafo">1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garatirem que não são robôs</p>
             <p class="conteudo-secundario-paragrafo">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
             <p class="conteudo-secundario-paragrafo">3. <strong>Sistema de avisos e banimento manual</strong> para pessoas administradoras utilizarem</p>
-
-        <section>
-
         </section>
 
     </main>
-
+    <hr>
     <footer class="rodape">    
         <img class="rodape-imagem" src="logo.png" alt="Logo do BB8 bot">
     </footer>
